Adding tests and more dynamodb impl